--- a/source/shared_lib/sources/streflop/CMakeLists.txt
+++ b/source/shared_lib/sources/streflop/CMakeLists.txt
@@ -13,7 +13,15 @@ INCLUDE_DIRECTORIES(
 
 SET(STREFLOP_SRC ${STREFLOP_GLOBBED_CPP})
 
+IF(MSVC)
+	ENABLE_LANGUAGE(ASM_MASM)
+	SET(STREFLOP_SRC ${STREFLOP_SRC} FPUSettings.asm)
+ENDIF()
+
 ADD_LIBRARY(streflop STATIC EXCLUDE_FROM_ALL
 	${STREFLOP_SRC}
 )
-set_target_properties(streflop PROPERTIES COMPILE_FLAGS "${PIC_FLAG}")
+
+IF(NOT MSVC)
+	set_target_properties(streflop PROPERTIES COMPILE_FLAGS "${PIC_FLAG}")
+ENDIF()
