--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,8 @@ on:
     paths:
       - '.github/workflows/docker.yml'
       - 'mk/linux/Dockerfile'
+  schedule:
+    - cron: '0 0 1 * *'
 
 jobs:
   build:
