--- a/mk/linux/Dockerfile
+++ b/mk/linux/Dockerfile
@@ -1,12 +1,54 @@
+# Dockerfile for building mg appimage
 FROM ubuntu:bionic
 
 ENV SHELL=/bin/bash
 
-ENV CC=gcc-8 CXX=g++-8
 RUN apt update && apt -y upgrade && \
-    apt install -y $CC $CXX build-essential cmake libcurl4-gnutls-dev libsdl2-dev libopenal-dev \
-    liblua5.3-dev libjpeg-dev libpng-dev libfreetype6-dev libwxgtk3.0-gtk3-dev libcppunit-dev \
-    libfribidi-dev libftgl-dev libglew-dev libogg-dev libvorbis-dev libminiupnpc-dev \
-    libircclient-dev libxml2-dev libx11-dev libgl1-mesa-dev libglu1-mesa-dev librtmp-dev \
-    libkrb5-dev libldap2-dev libidn2-dev libpsl-dev libgnutls28-dev libnghttp2-dev libssh-dev \
-    libbrotli-dev p7zip-full wget
+    apt install -y \
+    build-essential \
+    cmake \
+    g++ \
+    gcc \
+    imagemagick \
+    libbrotli-dev \
+    libcppunit-dev \
+    libcurl4-gnutls-dev \
+    libfreetype6-dev \
+    libfribidi-dev \
+    libftgl-dev \
+    libgl1-mesa-dev \
+    libglew-dev \
+    libglu1-mesa-dev \
+    libgnutls28-dev \
+    libidn2-dev \
+    libircclient-dev \
+    libjpeg-dev \
+    libkrb5-dev \
+    libldap2-dev \
+    liblua5.3-dev \
+    libminiupnpc-dev \
+    libnghttp2-dev \
+    libogg-dev \
+    libopenal-dev \
+    libpng-dev \
+    libpsl-dev \
+    librtmp-dev \
+    libsdl2-dev \
+    libssh-dev \
+    libvorbis-dev \
+    libwxgtk3.0-gtk3-dev \
+    libx11-dev \
+    libxml2-dev \
+    p7zip-full \
+    wget
+
+# Install linuxdeploy
+ENV TOOLS_DIR="/tools"
+RUN mkdir -p $TOOLS_DIR
+ARG ARCH=x86_64
+RUN /bin/bash -c 'cd $TOOLS_DIR \
+    && wget https://github.com/linuxdeploy/linuxdeploy/releases/download/1-alpha-20220822-1/linuxdeploy-${ARCH}.AppImage \
+    && chmod +x linuxdeploy-${ARCH}.AppImage \
+    && ./linuxdeploy-${ARCH}.AppImage --appimage-extract \
+    && rm ./linuxdeploy-${ARCH}.AppImage \
+    && cd -'
