--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -27,6 +27,7 @@ jobs:
         name: megaglest-x64-ubuntu
         path: |
           mk/linux/MegaGlest*.AppImage
+          source/tools/glexemel/{g2xml,xml2g}
   on-failure:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
