Fix g3dviewer and editor so they work as AppImages
* Fix code + cmake.
* Add instructions for installing snapshot.

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -29,6 +29,7 @@ jobs:
           mk/linux/MegaGlest*.AppImage
           mk/linux/g2xml
           mk/linux/xml2g
+          mk/linux/AppImageSnapshotInstructions.txt
   on-failure:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
